Bug fix for alignment

--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ h3 {font-size: 18px;}
 .column-align {flex-direction: column;}
 .row-align {flex-direction: row;}
 .flex-center{align-items: center; justify-content: center;}
-.width-49 {width: 50%;}
+.width-49 {width: 49%;}
 .bold {font-weight: bold;}
 
 /*................................................
@@ -164,7 +164,7 @@ h3 {font-size: 18px;}
     position: relative;
     width: 100%;
     height: 2px;
-    background-color: var(--overlay-color);
+    background-color: var(--icy-blue);
     transition: all 0.4s ease;
 }
 
@@ -337,8 +337,9 @@ h3 {font-size: 18px;}
     background-color: var(--white);
     border-radius: 5px;
 }
-.project-list__item:hover { box-shadow: inset  0 3px 8px 0 rgba(1, 18, 72, 0.2);}
-.selection {border: 0.1px dotted var(--dark-blue); box-shadow: 3px 6px 10px 3px rgba(1, 18, 72, 0.2);}
+.project-list__item:hover,
+.selection { border: 0.1px dotted var(--dark-blue); box-shadow: 3px 6px 10px 3px rgba(1, 18, 72, 0.2);}
+
 .circular {
     height: 50px;
     width: 50px;
